[gd_scene load_steps=13 format=3 uid="uid://bftsexb11rsxo"]

[ext_resource type="Script" path="res://Scripts/Player/CharacterMovement.gd" id="1_lys7n"]
[ext_resource type="Texture2D" uid="uid://6k8q2dj3idu4" path="res://Assets/Characters/suited_kobold.png" id="2_n804x"]
[ext_resource type="Script" path="res://Scripts/CharacterNavigation.gd" id="2_up1qu"]
[ext_resource type="Script" path="res://Scripts/Input/KoboldInput.gd" id="4_8j4uy"]
[ext_resource type="Texture2D" uid="uid://b5faybs1u2sq3" path="res://Assets/UI/Interact/F_Key.png" id="5_oisth"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerInteractuableArea.gd" id="5_spo01"]
[ext_resource type="Script" path="res://Scripts/UI/UI_Bob.gd" id="6_mcor7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3x5sg"]
radius = 0.2
height = 0.6

[sub_resource type="Animation" id="Animation_x6p6g"]
resource_name = "Damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o7oru"]
resource_name = "Walk"
length = 0.7
loop_mode = 1
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.5, 0, 0.2, 1, 0, 0.7, 0, 0.4, 1, 0, 0.5, 0, 0.6, 1, 0, 0.7, 0, 0.8, 1, 0, 0.5, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.2, 1, 0, 0, -0.087, 0.996, 0.4, 1, 0, 0, 0, 1, 0.6, 1, 0, 0, 0.087, 0.996, 0.8, 1, 0, 0, 0, 1)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jmjv7"]
_data = {
"Damaged": SubResource("Animation_x6p6g"),
"Walk": SubResource("Animation_o7oru")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_uhvi1"]
radius = 1.0

[node name="Kobold" type="CharacterBody3D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_lys7n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.32, 0)
shape = SubResource("CapsuleShape3D_3x5sg")

[node name="Body" type="Sprite3D" parent="."]
transform = Transform3D(1.53156, 0.0401054, 1.28558, -0.0523539, 1.99931, -1.22174e-08, -1.28514, -0.0336525, 1.53209, 0, 0.32, 0)
billboard = 2
texture_filter = 0
texture = ExtResource("2_n804x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jmjv7")
}
speed_scale = 2.0

[node name="Nav" type="Node3D" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="Nav" node_paths=PackedStringArray("character")]
path_height_offset = 0.5
script = ExtResource("2_up1qu")
character = NodePath("../..")

[node name="PathfindTimer" type="Timer" parent="Nav"]
wait_time = 0.25
autostart = true

[node name="Input" type="Node" parent="." node_paths=PackedStringArray("nav_agent")]
script = ExtResource("4_8j4uy")
nav_agent = NodePath("../Nav/NavigationAgent3D")

[node name="Player Interact Detector" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 32
script = ExtResource("5_spo01")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player Interact Detector"]
shape = SubResource("SphereShape3D_uhvi1")

[node name="Interact_Key Sprite" type="Sprite3D" parent="Player Interact Detector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
pixel_size = 0.005
billboard = 1
fixed_size = true
texture_filter = 0
texture = ExtResource("5_oisth")
script = ExtResource("6_mcor7")
bob = true

[connection signal="timeout" from="Nav/PathfindTimer" to="." method="_on_pathfind_timeout"]
[connection signal="area_entered" from="Player Interact Detector" to="Player Interact Detector" method="interactuable_entered"]
[connection signal="area_exited" from="Player Interact Detector" to="Player Interact Detector" method="interactuable_exited"]
